--- a/PenumbraRemoval/PenumbraRemoval/PenumbraRemoval.vcxproj
+++ b/PenumbraRemoval/PenumbraRemoval/PenumbraRemoval.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -21,29 +21,34 @@
   <PropertyGroup Label="Globals">
     <ProjectGuid>{25964089-BA04-427A-A807-B7CEE23B9D3E}</ProjectGuid>
     <RootNamespace>PenumbraRemoval</RootNamespace>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
+    <PlatformToolset>v141</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -62,14 +67,22 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\dev\eigen;C:\OpenCV2.3.1\build\install\include;C:\Work\VS2010\PenumbraRemoval;C:\Work\research\matlab\TRW_S-v1.3;C:\Work\VS2010\RandomForest\include;C:\Work\VS2010\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenCV2.3.1\build\install\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Documents\Visual Studio 2017\Libraries\Includes\Eigen v3.1.1;E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraRemoval;E:\Documents\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3;E:\Documents\Github\shadow-removal-code-archive\RandomForest\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
     <SourcePath>$(SourcePath)</SourcePath>
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\dev\eigen;C:\OpenCV2.3.1\build\install\include;C:\Work\VS2010\PenumbraRemoval;C:\Work\research\matlab\TRW_S-v1.3;C:\Work\VS2010\RandomForest\include;C:\Work\VS2010\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\OpenCV2.3.1\build\install\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\Documents\Visual Studio 2017\Libraries\Includes\Eigen v3.1.1;E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraRemoval;E:\Documents\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3;E:\Documents\Github\shadow-removal-code-archive\RandomForest\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>E:\Documents\Visual Studio 2017\Libraries\Includes\Eigen v3.1.1;E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraRemoval;E:\Documents\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3;E:\Documents\Github\shadow-removal-code-archive\RandomForest\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\x86\vc14\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>E:\Documents\Visual Studio 2017\Libraries\Includes\Eigen v3.1.1;E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraRemoval;E:\Documents\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3;E:\Documents\Github\shadow-removal-code-archive\RandomForest\include;E:\Documents\Github\shadow-removal-code-archive\PenumbraDataInspection\PenumbraDataInspection;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\Documents\Visual Studio 2017\Libraries\opencv2.4.1\build\x86\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -92,7 +105,7 @@
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>opencv_core231d.lib;opencv_highgui231d.lib;opencv_imgproc231d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_core2413d.lib;opencv_highgui2413d.lib;opencv_imgproc2413d.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -123,13 +136,13 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>opencv_core231.lib;opencv_highgui231.lib;opencv_imgproc231.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_core2413.lib;opencv_highgui2413.lib;opencv_imgproc2413.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\research\matlab\TRW_S-v1.3\minimize.cpp" />
-    <ClCompile Include="..\..\..\research\matlab\TRW_S-v1.3\MRFEnergy.cpp" />
-    <ClCompile Include="..\..\..\research\matlab\TRW_S-v1.3\treeProbabilities.cpp" />
+    <ClCompile Include="..\..\..\TRW_S-v1.3\minimize.cpp" />
+    <ClCompile Include="..\..\..\TRW_S-v1.3\MRFEnergy.cpp" />
+    <ClCompile Include="..\..\..\TRW_S-v1.3\treeProbabilities.cpp" />
     <ClCompile Include="..\..\RandomForest\src\Ensemble.cpp" />
     <ClCompile Include="..\..\RandomForest\src\NodeR.cpp" />
     <ClCompile Include="..\..\RandomForest\src\RandomForestCommon.cpp" />
