--- a/PenumbraRemoval/PenumbraRemoval/PenumbraRemoval.vcxproj.filters
+++ b/PenumbraRemoval/PenumbraRemoval/PenumbraRemoval.vcxproj.filters
@@ -57,13 +57,13 @@
     <ClCompile Include="..\DataProvider\Serializer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\TRW_S-v1.3\minimize.cpp">
+    <ClCompile Include="..\..\..\..\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3\MRFEnergy.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\TRW_S-v1.3\MRFEnergy.cpp">
+    <ClCompile Include="..\..\..\..\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3\minimize.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\TRW_S-v1.3\treeProbabilities.cpp">
+    <ClCompile Include="..\..\..\..\Visual Studio 2017\Libraries\Includes\TRW_S-v1.3\treeProbabilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
